Optimisation : Replacing "new Float()" by "Float.valueOf()"